# rust-client

./: .gitignore  Cargo.toml  Readme.md
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: functional.rs
