
[package]
name = "synchronizer"
version = "0.0.1"
description = ""
authors = [""]
repository = ""
license = ""
homepage = ""
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = ""
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.6"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "synchronizer"
crate-type = ["cdylib", "lib"]
