
[package]
name = "synchronizer"
version = "0.0.1"
description = ""
authors = [""]
repository = ""
license = ""
homepage = ""
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = ""
borsh = "0.7.1"
borsh-derive = "0.8.1"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "=1.6.9"
spl-token =  { version = "3.1.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.2", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "=1.6.9"
solana-sdk = "=1.6.9"

[lib]
name = "synchronizer"
crate-type = ["cdylib", "lib"]
